CHANGES.txt - 10/22/2002
------------------------

CHANGES IN CUPS V1.1.17

	- The scheduler never reset the NumJobs variable before
	  loading the job list (previously this only happened on
	  a full start, so the problem was never apparent...)
	- The HTTP and IPP read/write code didn't handle EINTR
	  (interrupted system call) errors.
	- When under high load, the scheduler could abort due to
	  the wrong errno value after a select() call.  This was
	  caused by the child signal handler.
	- Added new load tests to the test target to verify that
	  cupsd can handle hundreds of simultaneous jobs without
	  error.
	- The Solaris USB backend now supports the new device
	  URI syntax.
	- The ppdOpen*() functions now reset the numeric locale
	  settings while loading a PPD file.
	- Fixed the libtool build rules.
	- The manpage make rules didn't use $(MAKE) and
	  $(MFLAGS) for the language subdirectories.
	- Now set the LC_TIME locale category to get the
	  properly localized time string.
	- Fixed a problem in the scheduler that would cause the
	  web interface problems when adding, modifying, or
	  configuring a printer or class.
	- The backends now ignore SIGPIPE so that failed job
	  filters will not stop a print queue.
	- The lpstat command did not allow for destination lists
	  ("lpstat -v printer1,printer2")
	- Fixed parsing of long filter status messages in the
	  scheduler.
	- Added some startup performance enhancements to the
	  scheduler so that the printer object information is
	  regenerated fewer times and the MIME type database is
	  not filled with lots of empty filters for raw/direct
	  queues.
	- The LPD backend now sends the job title as the print
	  filename.
	- Added support for variable sizes in the EPSON dot
	  matrix printer drivers.  This allows for pages as
	  short as 1/2" (1 row of labels) and does not do an
	  automatic form feed.
	- French translation updates.
	- The filters did not quote the page label string when