@@ -3,6 +3,8 @@ CHANGES.txt - 10/22/2002
 
 CHANGES IN CUPS V1.1.17
 
+	- The image filters did not properly handle grayscale
+	  printing of Sun Raster images.
 	- The scheduler never reset the NumJobs variable before
 	  loading the job list (previously this only happened on
 	  a full start, so the problem was never apparent...)
